# ReportMind

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
reports/: Report_2026-04-23_01-39-16.md  Report_2026-04-23_01-46-05.md
